Mon Sep  3 02:14:58 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libexslt/Makefile.am libexslt/exslt.[ch] libexslt/strings.c:
	  added implementation of EXSLT - Strings.
	  Currently implemented functins are str:tokenize, str:align
	  str:concat and str:padding.
	* configure.in tests/exslt/Makefile.am
	  tests/exslt/strings/Makefile.am
	  tests/exslt/strings/tokenize.1.*: added a test for the
	  str:tokenize function.

Fri Aug 31 13:51:53 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/libxslt.4 libexslt/libexslt.4 libxslt/Makefile.am
	  libexslt/Makefile.am: added man pages provided by Heiko Rupp

Wed Aug 29 21:23:54 MDT 2001 John Fleck <jfleck@inkstain.net>

	* doc/tutorial/libxslttutorial.xml, libxslttutorial.html - update
	tutorial text to add references to global variables cleanups

Wed Aug 29 21:05:43 MDT 2001 John Fleck <jfleck@inkstain.net>

	* doc/xsltproc.1 - added xsltproc man page (note: this has not
	been added into the build yet)

Wed Aug 29 22:58:58 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* doc/tutorial/libxslt_tutorial.c doc/tutorial/libxslttutorial.html
	  doc/tutorial/libxslttutorial.xml: added global variables cleanups
	  to the example.
	* tests/documents/Makefile.am: mjcox pointed to some missing files

Wed Aug 29 15:32:52 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libexslt/common.c: fixed a bug in exsltNodeSetFunction

Wed Aug 29 15:18:28 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libexslt/common.c: implemented version 3 of the exslt:node-set()
	  function.
	* tests/exslt/common/Makefile.am
	  tests/exslt/common/node-set.3.{xml,xsl,out}: added a test

Mon Aug 27 08:27:21 MDT 2001 John Fleck <jfleck@inkstain.net>

	* adding doc/xsltproc.html - html generated from xsltproc.xml,
	update doc/xslt.html with link to xsltproc.html

Mon Aug 27 08:21:47 MDT 2001 John Fleck <jfleck@inkstain.net>

	* adding doc/xsltproc.xml - user manual for xsltproc
	
Sun Aug 26 20:52:02 CEST 2001 Daniel Veillard <daniel@veillard.com>
